--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -21,7 +21,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"D:/GitHub/HeavenPatch/WB1;D:/GitHub/HeavenPatch/WB6;D:/GitHub/HeavenPatch/WB5;;;;;;;\"}"
+                "value": "{\"m_Value\":\"D:/GitHub/HeavenPatch/WebGL Builds;D:/GitHub/HeavenPatch/Level3build;D:/GitHub/HeavenPatch/WB1;D:/GitHub/HeavenPatch/WB6;D:/GitHub/HeavenPatch/WB5;;;;;\"}"
             }
         ]
     }
